Разметка главной страницы

--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,316 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-  <title>Mclub</title>
+  <title>Music Now</title>
   <meta name="robots" content="noindex, nofollow">
-  
+
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
 
+  <div class="promo">
+
+    <header class="header">
+      <div class="container clearfix">
+        <div class="logo">
+          <img src="img/logo.png" srcset="img/logo@2x.png 2x" width="196" height="48" alt="Logo">
+        </div>
+
+        <nav class="menu">
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#" class="menu__link menu__link--active">Home</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link menu__link--active">How to stream</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link menu__link--border">Download</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <div class="container">
+      <h1 class="promo__title">Stream your concert live easily with your smartphone</h1>
+      <a href="#" class="promo__btn"><img src="img/ico-apple.png" srcset="img/ico-apple@2x.png 2x" width="20" height="24" alt=""> Download</a>
+    </div>
+  </div>
+
+  <section class="features">
+    <h2 class="section-title">Amazing Features</h2>
+    <div class="clearfix">
+      <article class="feature">
+        <img src="img/ico-1.png" srcset="img/ico-1@2x.png 2x" width="64" height="64" alt="">
+        <h2 class="feature__title">Grow your audience</h2>
+        <p class="feature__text">By sharing the concert on all social medias with just one click, streaming directly to Facebook Live and uploading videos to YouTube</p>
+      </article>
+      <article class="feature">
+        <img src="img/ico-2.png" srcset="img/ico-2@2x.png 2x" width="80" height="56" alt="">
+        <h2 class="feature__title">Make Money</h2>
+        <p class="feature__text">From Pay what you want or paid broadcasts and pledges from fans (will be available soon)</p>
+      </article>
+      <article class="feature">
+        <img src="img/ico-3.png" srcset="img/ico-3@2x.png 2x" width="64" height="64" alt="">
+        <h2 class="feature__title">Achieve the best quality of sound</h2>
+        <p class="feature__text">With our sound settings and by connecting smartphone to mixer and external microphones</p>
+      </article>
+      <article class="feature">
+        <img src="img/ico-4.png" srcset="img/ico-4@2x.png 2x" width="64" height="64" alt="">
+        <h2 class="feature__title">Get a PRO video experience</h2>
+        <p class="feature__text">With streaming from different spots with several cameras, when the viewer can choose from what camera to watch. (GoPros and 360° cameras will be available soon)</p>
+      </article>
+      <article class="feature">
+        <img src="img/ico-5.png" srcset="img/ico-5@2x.png 2x" width="64" height="64" alt="">
+        <h2 class="feature__title">Become visible to labels</h2>
+        <p class="feature__text">With streaming your concerts and achieving high number of views</p>
+      </article>
+    </div>
+  </section>
+
+  <div class="gray">
+    <div class="container">
+      <div class="sort clearfix">
+        <div class="sort__form">
+          <form action="" method="">
+            <input type="text" placeholder="Search">
+          </form>
+        </div>
+        <ul class="sort__list">
+          <li class="sort__item">Genres:</li>
+          <li class="sort__item">
+            <a href="#" class="sort__link">#rock</a>
+          </li>
+          <li class="sort__item">
+            <a href="#" class="sort__link">#pop</a>
+          </li>
+          <li class="sort__item">
+            <a href="#" class="sort__link">#blues</a>
+          </li>
+          <li class="sort__item">
+            <a href="#" class="sort__link">#jazz</a>
+          </li>
+          <li class="sort__item">
+            <a href="#" class="sort__link">#alternative</a>
+          </li>
+          <li class="sort__item">
+            <a href="#" class="sort__link">#rap</a>
+          </li>
+          <li class="sort__item">
+            <a href="#" class="sort__link">#reggae</a>
+          </li>
+        </ul>
+      </div>
+
+      <section class="cards">
+        <h2 class="section-title">Next Shows</h2>
+
+        <div class="cards__container">
+          <article class="card">
+            <img src="img/show1.jpg" srcset="img/show1@2x.jpg 2x" width="292" height="152" alt="">
+            <div class="card__date">Jul 10 at 2 pm</div>
+            <div class="card__person">
+              <img src="img/player1.jpg" srcset="img/player1@2x.jpg 2x" width="40" height="40" alt="">
+              <p class="card__name">
+                <strong>Cut the cord</strong> Shinedown
+              </p>
+            </div>
+          </article>
+          <article class="card">
+            <img src="img/show1.jpg" srcset="img/show1@2x.jpg 2x" width="292" height="152" alt="">
+            <div class="card__date">Jul 10 at 2 pm</div>
+            <div class="card__person">
+              <img src="img/player1.jpg" srcset="img/player1@2x.jpg 2x" width="40" height="40" alt="">
+              <p class="card__name">
+                <strong>Cut the cord</strong> Shinedown
+              </p>
+            </div>
+          </article>
+          <article class="card">
+            <img src="img/show1.jpg" srcset="img/show1@2x.jpg 2x" width="292" height="152" alt="">
+            <div class="card__date">Jul 10 at 2 pm</div>
+            <div class="card__person">
+              <img src="img/player1.jpg" srcset="img/player1@2x.jpg 2x" width="40" height="40" alt="">
+              <p class="card__name">
+                <strong>Cut the cord</strong> Shinedown
+              </p>
+            </div>
+          </article>
+          <article class="card">
+            <img src="img/show1.jpg" srcset="img/show1@2x.jpg 2x" width="292" height="152" alt="">
+            <div class="card__date">Jul 10 at 2 pm</div>
+            <div class="card__person">
+              <img src="img/player1.jpg" srcset="img/player1@2x.jpg 2x" width="40" height="40" alt="">
+              <p class="card__name">
+                <strong>Cut the cord</strong> Shinedown
+              </p>
+            </div>
+          </article>
+          <article class="card">
+            <img src="img/show1.jpg" srcset="img/show1@2x.jpg 2x" width="292" height="152" alt="">
+            <div class="card__date">Jul 10 at 2 pm</div>
+            <div class="card__person">
+              <img src="img/player1.jpg" srcset="img/player1@2x.jpg 2x" width="40" height="40" alt="">
+              <p class="card__name">
+                <strong>Cut the cord</strong> Shinedown
+              </p>
+            </div>
+          </article>
+          <article class="card">
+            <img src="img/show1.jpg" srcset="img/show1@2x.jpg 2x" width="292" height="152" alt="">
+            <div class="card__date">Jul 10 at 2 pm</div>
+            <div class="card__person">
+              <img src="img/player1.jpg" srcset="img/player1@2x.jpg 2x" width="40" height="40" alt="">
+              <p class="card__name">
+                <strong>Cut the cord</strong> Shinedown
+              </p>
+            </div>
+          </article>
+          <article class="card">
+            <img src="img/show1.jpg" srcset="img/show1@2x.jpg 2x" width="292" height="152" alt="">
+            <div class="card__date">Jul 10 at 2 pm</div>
+            <div class="card__person">
+              <img src="img/player1.jpg" srcset="img/player1@2x.jpg 2x" width="40" height="40" alt="">
+              <p class="card__name">
+                <strong>Cut the cord</strong> Shinedown
+              </p>
+            </div>
+          </article>
+          <article class="card">
+            <img src="img/show1.jpg" srcset="img/show1@2x.jpg 2x" width="292" height="152" alt="">
+            <div class="card__date">Jul 10 at 2 pm</div>
+            <div class="card__person">
+              <img src="img/player1.jpg" srcset="img/player1@2x.jpg 2x" width="40" height="40" alt="">
+              <p class="card__name">
+                <strong>Cut the cord</strong> Shinedown
+              </p>
+            </div>
+          </article>
+        </div>
+        <a href="#" class="btn btn-default">Load More</a>
+      </section>
+
+      <section class="cards">
+        <h2 class="section-title">Live &amp; Recorded Videos</h2>
+
+        <div class="cards__container">
+          <article class="card">
+            <img src="img/show1.jpg" srcset="img/show1@2x.jpg 2x" width="292" height="152" alt="">
+            <div class="card__date">Jul 10 at 2 pm</div>
+            <div class="card__person">
+              <img src="img/player1.jpg" srcset="img/player1@2x.jpg 2x" width="40" height="40" alt="">
+              <p class="card__name">
+                <strong>Cut the cord</strong> Shinedown
+              </p>
+            </div>
+          </article>
+          <article class="card">
+            <img src="img/show1.jpg" srcset="img/show1@2x.jpg 2x" width="292" height="152" alt="">
+            <div class="card__date">Jul 10 at 2 pm</div>
+            <div class="card__person">
+              <img src="img/player1.jpg" srcset="img/player1@2x.jpg 2x" width="40" height="40" alt="">
+              <p class="card__name">
+                <strong>Cut the cord</strong> Shinedown
+              </p>
+            </div>
+          </article>
+          <article class="card">
+            <img src="img/show1.jpg" srcset="img/show1@2x.jpg 2x" width="292" height="152" alt="">
+            <div class="card__date">Jul 10 at 2 pm</div>
+            <div class="card__person">
+              <img src="img/player1.jpg" srcset="img/player1@2x.jpg 2x" width="40" height="40" alt="">
+              <p class="card__name">
+                <strong>Cut the cord</strong> Shinedown
+              </p>
+            </div>
+          </article>
+          <article class="card">
+            <img src="img/show1.jpg" srcset="img/show1@2x.jpg 2x" width="292" height="152" alt="">
+            <div class="card__date">Jul 10 at 2 pm</div>
+            <div class="card__person">
+              <img src="img/player1.jpg" srcset="img/player1@2x.jpg 2x" width="40" height="40" alt="">
+              <p class="card__name">
+                <strong>Cut the cord</strong> Shinedown
+              </p>
+            </div>
+          </article>
+          <article class="card">
+            <img src="img/show1.jpg" srcset="img/show1@2x.jpg 2x" width="292" height="152" alt="">
+            <div class="card__date">Jul 10 at 2 pm</div>
+            <div class="card__person">
+              <img src="img/player1.jpg" srcset="img/player1@2x.jpg 2x" width="40" height="40" alt="">
+              <p class="card__name">
+                <strong>Cut the cord</strong> Shinedown
+              </p>
+            </div>
+          </article>
+          <article class="card">
+            <img src="img/show1.jpg" srcset="img/show1@2x.jpg 2x" width="292" height="152" alt="">
+            <div class="card__date">Jul 10 at 2 pm</div>
+            <div class="card__person">
+              <img src="img/player1.jpg" srcset="img/player1@2x.jpg 2x" width="40" height="40" alt="">
+              <p class="card__name">
+                <strong>Cut the cord</strong> Shinedown
+              </p>
+            </div>
+          </article>
+          <article class="card">
+            <img src="img/show1.jpg" srcset="img/show1@2x.jpg 2x" width="292" height="152" alt="">
+            <div class="card__date">Jul 10 at 2 pm</div>
+            <div class="card__person">
+              <img src="img/player1.jpg" srcset="img/player1@2x.jpg 2x" width="40" height="40" alt="">
+              <p class="card__name">
+                <strong>Cut the cord</strong> Shinedown
+              </p>
+            </div>
+          </article>
+          <article class="card">
+            <img src="img/show1.jpg" srcset="img/show1@2x.jpg 2x" width="292" height="152" alt="">
+            <div class="card__date">Jul 10 at 2 pm</div>
+            <div class="card__person">
+              <img src="img/player1.jpg" srcset="img/player1@2x.jpg 2x" width="40" height="40" alt="">
+              <p class="card__name">
+                <strong>Cut the cord</strong> Shinedown
+              </p>
+            </div>
+          </article>
+        </div>
+        <a href="#" class="btn btn-default">Load More</a>
+      </section>
+
+
+    </div>
+  </div>
+
+  <footer class="footer">
+    <div class="container clearfix">
+      <div class="logo">
+        <img src="img/logo-footer.png" srcset="img/logo-footer@2x.png 2x" width="196" height="48" alt="Logo">
+      </div>
+
+      <div class="footer__right">
+        <nav class="menu menu--footer">
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#" class="menu__link menu__link--active">Home</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link menu__link--active">How to stream</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link menu__link--border">Download</a>
+            </li>
+          </ul>
+        </nav>
+
+        <div class="footer__descr">
+          © MusicNow 2015. All rights reserved  |  <a href="mailto:contact@musicnowapp.com">contact@musicnowapp.com</a>
+        </div>
+      </div>
+
+    </div>
+  </footer>
 
 
   <script type="text/javascript" src="js/script.min.js"></script>
