Стилизация экрана промо

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Music Now</title>
   <meta name="robots" content="noindex, nofollow">
-
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -23,7 +23,7 @@
               <a href="#" class="menu__link menu__link--active">Home</a>
             </li>
             <li class="menu__item">
-              <a href="#" class="menu__link menu__link--active">How to stream</a>
+              <a href="#" class="menu__link">How to stream</a>
             </li>
             <li class="menu__item">
               <a href="#" class="menu__link menu__link--border">Download</a>
@@ -34,14 +34,14 @@
     </header>
 
     <div class="container">
-      <h1 class="promo__title">Stream your concert live easily with your smartphone</h1>
-      <a href="#" class="promo__btn"><img src="img/ico-apple.png" srcset="img/ico-apple@2x.png 2x" width="20" height="24" alt=""> Download</a>
+      <h1 class="promo__title">Stream your concert live easily<br>with your smartphone</h1>
+      <a href="#" class="promo__btn"><img src="img/ico-apple.png" srcset="img/ico-apple@2x.png 2x" width="20" height="24" alt=""> Download the App</a>
     </div>
   </div>
 
   <section class="features">
     <h2 class="section-title">Amazing Features</h2>
-    <div class="clearfix">
+    <div class="container clearfix">
       <article class="feature">
         <img src="img/ico-1.png" srcset="img/ico-1@2x.png 2x" width="64" height="64" alt="">
         <h2 class="feature__title">Grow your audience</h2>
