Стилизация блока преймуществ

--- a/src/index.html
+++ b/src/index.html
@@ -43,27 +43,37 @@
     <h2 class="section-title">Amazing Features</h2>
     <div class="container clearfix">
       <article class="feature">
-        <img src="img/ico-1.png" srcset="img/ico-1@2x.png 2x" width="64" height="64" alt="">
+        <div class="feature__image">
+          <img src="img/ico-1.png" srcset="img/ico-1@2x.png 2x" width="64" height="64" alt="">
+        </div>
         <h2 class="feature__title">Grow your audience</h2>
         <p class="feature__text">By sharing the concert on all social medias with just one click, streaming directly to Facebook Live and uploading videos to YouTube</p>
       </article>
       <article class="feature">
-        <img src="img/ico-2.png" srcset="img/ico-2@2x.png 2x" width="80" height="56" alt="">
+        <div class="feature__image">
+          <img src="img/ico-2.png" srcset="img/ico-2@2x.png 2x" width="80" height="56" alt="">
+        </div>
         <h2 class="feature__title">Make Money</h2>
         <p class="feature__text">From Pay what you want or paid broadcasts and pledges from fans (will be available soon)</p>
       </article>
       <article class="feature">
-        <img src="img/ico-3.png" srcset="img/ico-3@2x.png 2x" width="64" height="64" alt="">
+        <div class="feature__image">
+          <img src="img/ico-3.png" srcset="img/ico-3@2x.png 2x" width="64" height="64" alt="">
+        </div>
         <h2 class="feature__title">Achieve the best quality of sound</h2>
         <p class="feature__text">With our sound settings and by connecting smartphone to mixer and external microphones</p>
       </article>
       <article class="feature">
-        <img src="img/ico-4.png" srcset="img/ico-4@2x.png 2x" width="64" height="64" alt="">
+        <div class="feature__image">
+          <img src="img/ico-4.png" srcset="img/ico-4@2x.png 2x" width="64" height="64" alt="">
+        </div>
         <h2 class="feature__title">Get a PRO video experience</h2>
         <p class="feature__text">With streaming from different spots with several cameras, when the viewer can choose from what camera to watch. (GoPros and 360° cameras will be available soon)</p>
       </article>
       <article class="feature">
-        <img src="img/ico-5.png" srcset="img/ico-5@2x.png 2x" width="64" height="64" alt="">
+        <div class="feature__image">
+          <img src="img/ico-5.png" srcset="img/ico-5@2x.png 2x" width="64" height="64" alt="">
+        </div>
         <h2 class="feature__title">Become visible to labels</h2>
         <p class="feature__text">With streaming your concerts and achieving high number of views</p>
       </article>
