Секция со стримами

--- a/src/index.html
+++ b/src/index.html
@@ -199,7 +199,7 @@
             </div>
           </article>
         </div>
-        <a href="#" class="btn btn-default">Load More</a>
+        <a href="#" class="btn btn--default">Load More</a>
       </section>
 
       <section class="cards">
@@ -287,7 +287,7 @@
             </div>
           </article>
         </div>
-        <a href="#" class="btn btn-default">Load More</a>
+        <a href="#" class="btn btn--default">Load More</a>
       </section>
 
 
