вот так вообще лучше будет

--- a/src/index.html
+++ b/src/index.html
@@ -118,7 +118,7 @@
         <h2 class="section-title">Next Shows</h2>
 
         <div class="cards__container">
-          <article class="card">
+          <a href="#" class="card">
             <img src="img/show1.jpg" srcset="img/show1@2x.jpg 2x" width="292" height="152" alt="">
             <div class="card__date">Jul 10 at 2 pm</div>
             <div class="card__person">
@@ -127,8 +127,8 @@
                 <strong>Cut the cord</strong> Shinedown
               </p>
             </div>
-          </article>
-          <article class="card">
+          </a>
+          <a href="#" class="card">
             <img src="img/show1.jpg" srcset="img/show1@2x.jpg 2x" width="292" height="152" alt="">
             <div class="card__date">Jul 10 at 2 pm</div>
             <div class="card__person">
@@ -137,8 +137,8 @@
                 <strong>Cut the cord</strong> Shinedown
               </p>
             </div>
-          </article>
-          <article class="card">
+          </a>
+          <a href="#" class="card">
             <img src="img/show1.jpg" srcset="img/show1@2x.jpg 2x" width="292" height="152" alt="">
             <div class="card__date">Jul 10 at 2 pm</div>
             <div class="card__person">
@@ -147,8 +147,8 @@
                 <strong>Cut the cord</strong> Shinedown
               </p>
             </div>
-          </article>
-          <article class="card">
+          </a>
+          <a href="#" class="card">
             <img src="img/show1.jpg" srcset="img/show1@2x.jpg 2x" width="292" height="152" alt="">
             <div class="card__date">Jul 10 at 2 pm</div>
             <div class="card__person">
@@ -157,8 +157,8 @@
                 <strong>Cut the cord</strong> Shinedown
               </p>
             </div>
-          </article>
-          <article class="card">
+          </a>
+          <a href="#" class="card">
             <img src="img/show1.jpg" srcset="img/show1@2x.jpg 2x" width="292" height="152" alt="">
             <div class="card__date">Jul 10 at 2 pm</div>
             <div class="card__person">
@@ -167,8 +167,8 @@
                 <strong>Cut the cord</strong> Shinedown
               </p>
             </div>
-          </article>
-          <article class="card">
+          </a>
+          <a href="#" class="card">
             <img src="img/show1.jpg" srcset="img/show1@2x.jpg 2x" width="292" height="152" alt="">
             <div class="card__date">Jul 10 at 2 pm</div>
             <div class="card__person">
@@ -177,8 +177,8 @@
                 <strong>Cut the cord</strong> Shinedown
               </p>
             </div>
-          </article>
-          <article class="card">
+          </a>
+          <a href="#" class="card">
             <img src="img/show1.jpg" srcset="img/show1@2x.jpg 2x" width="292" height="152" alt="">
             <div class="card__date">Jul 10 at 2 pm</div>
             <div class="card__person">
@@ -187,8 +187,8 @@
                 <strong>Cut the cord</strong> Shinedown
               </p>
             </div>
-          </article>
-          <article class="card">
+          </a>
+          <a href="#" class="card">
             <img src="img/show1.jpg" srcset="img/show1@2x.jpg 2x" width="292" height="152" alt="">
             <div class="card__date">Jul 10 at 2 pm</div>
             <div class="card__person">
@@ -197,7 +197,7 @@
                 <strong>Cut the cord</strong> Shinedown
               </p>
             </div>
-          </article>
+          </a>
         </div>
         <a href="#" class="btn btn--default">Load More</a>
       </section>
@@ -206,7 +206,7 @@
         <h2 class="section-title">Live &amp; Recorded Videos</h2>
 
         <div class="cards__container">
-          <article class="card">
+          <a href="#" class="card">
             <img src="img/show1.jpg" srcset="img/show1@2x.jpg 2x" width="292" height="152" alt="">
             <div class="card__date">Jul 10 at 2 pm</div>
             <div class="card__person">
@@ -215,8 +215,8 @@
                 <strong>Cut the cord</strong> Shinedown
               </p>
             </div>
-          </article>
-          <article class="card">
+          </a>
+          <a href="#" class="card">
             <img src="img/show1.jpg" srcset="img/show1@2x.jpg 2x" width="292" height="152" alt="">
             <div class="card__date">Jul 10 at 2 pm</div>
             <div class="card__person">
@@ -225,8 +225,8 @@
                 <strong>Cut the cord</strong> Shinedown
               </p>
             </div>
-          </article>
-          <article class="card">
+          </a>
+          <a href="#" class="card">
             <img src="img/show1.jpg" srcset="img/show1@2x.jpg 2x" width="292" height="152" alt="">
             <div class="card__date">Jul 10 at 2 pm</div>
             <div class="card__person">
@@ -235,8 +235,8 @@
                 <strong>Cut the cord</strong> Shinedown
               </p>
             </div>
-          </article>
-          <article class="card">
+          </a>
+          <a href="#" class="card">
             <img src="img/show1.jpg" srcset="img/show1@2x.jpg 2x" width="292" height="152" alt="">
             <div class="card__date">Jul 10 at 2 pm</div>
             <div class="card__person">
@@ -245,8 +245,8 @@
                 <strong>Cut the cord</strong> Shinedown
               </p>
             </div>
-          </article>
-          <article class="card">
+          </a>
+          <a href="#" class="card">
             <img src="img/show1.jpg" srcset="img/show1@2x.jpg 2x" width="292" height="152" alt="">
             <div class="card__date">Jul 10 at 2 pm</div>
             <div class="card__person">
@@ -255,8 +255,8 @@
                 <strong>Cut the cord</strong> Shinedown
               </p>
             </div>
-          </article>
-          <article class="card">
+          </a>
+          <a href="#" class="card">
             <img src="img/show1.jpg" srcset="img/show1@2x.jpg 2x" width="292" height="152" alt="">
             <div class="card__date">Jul 10 at 2 pm</div>
             <div class="card__person">
@@ -265,8 +265,8 @@
                 <strong>Cut the cord</strong> Shinedown
               </p>
             </div>
-          </article>
-          <article class="card">
+          </a>
+          <a href="#" class="card">
             <img src="img/show1.jpg" srcset="img/show1@2x.jpg 2x" width="292" height="152" alt="">
             <div class="card__date">Jul 10 at 2 pm</div>
             <div class="card__person">
@@ -275,8 +275,8 @@
                 <strong>Cut the cord</strong> Shinedown
               </p>
             </div>
-          </article>
-          <article class="card">
+          </a>
+          <a href="#" class="card">
             <img src="img/show1.jpg" srcset="img/show1@2x.jpg 2x" width="292" height="152" alt="">
             <div class="card__date">Jul 10 at 2 pm</div>
             <div class="card__person">
@@ -285,7 +285,7 @@
                 <strong>Cut the cord</strong> Shinedown
               </p>
             </div>
-          </article>
+          </a>
         </div>
         <a href="#" class="btn btn--default">Load More</a>
       </section>
