--- a/src/index.html
+++ b/src/index.html
@@ -304,13 +304,13 @@
         <nav class="menu menu--footer">
           <ul class="menu__list">
             <li class="menu__item">
-              <a href="#" class="menu__link menu__link--active">Home</a>
+              <a href="#" class="menu__link">Home</a>
             </li>
             <li class="menu__item">
-              <a href="#" class="menu__link menu__link--active">How to stream</a>
+              <a href="#" class="menu__link">How to stream</a>
             </li>
             <li class="menu__item">
-              <a href="#" class="menu__link menu__link--border">Download</a>
+              <a href="#" class="menu__link">Download</a>
             </li>
           </ul>
         </nav>
