Разметка второй страницы

--- a/src/how.html
+++ b/src/how.html
@@ -34,7 +34,65 @@
     </div>
   </header>
 
+  <section class="container page">
+    <h2 class="section-title">Amazing Features</h2>
+    <p>Tips and tricks to make your performance awesome</p>
 
+    <div class="page__section">
+      <h3>Must</h3>
+      <ul>
+        <li>Bandwidth: ensure that you have a good connection, preferably Wi-Fi</li>
+        <li>Battery: make sure that your Phone or iPad is connected to an electric outlet, or its battery is charged enough</li>
+        <li>No calls:</li>
+      </ul>
+
+      <div class="panel">
+        <p class="panel__title">If you are using Wi-Fi:</p>
+        <ol>
+          <li><img src="img/ico-2-1.png" srcset="img/ico-2-1@2x.png 2x" width="28" height="28" alt=""> Open iPhone Settings</li>
+          <li>Turn on Airplane Mode <img src="img/ico-3-1.png" srcset="img/ico-3-1@2x.png 2x" width="250" height="36" alt=""></li>
+          <li>Turn on Wi-Fi <img src="img/ico-3-2.png" srcset="img/ico-3-2@2x.png 2x" width="250" height="36" alt=""></li>
+        </ol>
+      </div>
+
+      <div class="panel">
+        <p class="panel__title">If you are using 3G:</p>
+        <ol>
+          <li><img src="img/ico-2-1.png" srcset="img/ico-2-1@2x.png 2x" width="28" height="28" alt=""> Open iPhone Settings</li>
+          <li><img src="img/ico-2-2.png" srcset="img/ico-2-2@2x.png 2x" width="28" height="28" alt=""> Tap Phone</li>
+          <li><img src="img/ico-2-3.png" srcset="img/ico-2-3@2x.png 2x" width="28" height="28" alt=""> Tap Call Forwarding</li>
+          <li>Turn on Call Forwarding <img src="img/ico-3-3.png" srcset="img/ico-3-3@2x.png 2x" width="250" height="36" alt=""></li>
+          <li>Type in the Phone Number you wish your calls to be forwarded to <img src="img/ico-3-4.png" srcset="img/ico-3-4@2x.png 2x" width="250" height="36" alt=""></li>
+        </ol>
+      </div>
+
+      <div class="page__section">
+        <h3>Optional but Important</h3>
+
+        <div class="page__feature">
+          <article class="feature">
+            <div class="feature__image">
+              <img src="img/ico-6.png" srcset="img/ico-6@2x.png 2x" width="58" height="64" alt="">
+            </div>
+            <p class="feature__text">Tripod: put your iPhone or iPad on a tripod, or on any stable surface for a better video quality</p>
+          </article>
+          <article class="feature">
+            <div class="feature__image">
+              <img src="img/ico-7.png" srcset="img/ico-7@2x.png 2x" width="64" height="36" alt="">
+            </div>
+            <p class="feature__text">Camera positioning: stream in a vertical position, as there is no option for horizontal video on our website yet</p>
+          </article>
+          <article class="feature">
+            <div class="feature__image">
+              <img src="img/ico-8.png" srcset="img/ico-8@2x.png 2x" width="64" height="64" alt="">
+            </div>
+            <p class="feature__text">Clean lens: wipe the lens for a better video quality</p>
+          </article>
+        </div>
+      </div>
+
+    </div>
+  </section>
 
   <footer class="footer">
     <div class="container clearfix">
