А мы вот так поступим

--- a/src/how.html
+++ b/src/how.html
@@ -35,7 +35,7 @@
   </header>
 
   <section class="container page">
-    <h2 class="section-title">Amazing Features</h2>
+    <h1 class="page__title">Stream Recommendations</h1>
     <p>Tips and tricks to make your performance awesome</p>
 
     <div class="page__section">
