--- a/src/how.html
+++ b/src/how.html
@@ -49,7 +49,7 @@
       <div class="panel">
         <p class="panel__title">If you are using Wi-Fi:</p>
         <ol>
-          <li><img src="img/ico-2-1.png" srcset="img/ico-2-1@2x.png 2x" width="28" height="28" alt=""> Open iPhone Settings</li>
+          <li><img src="img/ico-2-1.png" srcset="img/ico-2-1@2x.png 2x" width="28" height="28" alt="" class="ico"> Open iPhone Settings</li>
           <li>Turn on Airplane Mode <img src="img/ico-3-1.png" srcset="img/ico-3-1@2x.png 2x" width="250" height="36" alt=""></li>
           <li>Turn on Wi-Fi <img src="img/ico-3-2.png" srcset="img/ico-3-2@2x.png 2x" width="250" height="36" alt=""></li>
         </ol>
@@ -58,9 +58,9 @@
       <div class="panel">
         <p class="panel__title">If you are using 3G:</p>
         <ol>
-          <li><img src="img/ico-2-1.png" srcset="img/ico-2-1@2x.png 2x" width="28" height="28" alt=""> Open iPhone Settings</li>
-          <li><img src="img/ico-2-2.png" srcset="img/ico-2-2@2x.png 2x" width="28" height="28" alt=""> Tap Phone</li>
-          <li><img src="img/ico-2-3.png" srcset="img/ico-2-3@2x.png 2x" width="28" height="28" alt=""> Tap Call Forwarding</li>
+          <li><img src="img/ico-2-1.png" srcset="img/ico-2-1@2x.png 2x" width="28" height="28" alt="" class="ico"> Open iPhone Settings</li>
+          <li><img src="img/ico-2-2.png" srcset="img/ico-2-2@2x.png 2x" width="28" height="28" alt="" class="ico"> Tap Phone</li>
+          <li><img src="img/ico-2-3.png" srcset="img/ico-2-3@2x.png 2x" width="28" height="28" alt="" class="ico"> Tap Call Forwarding</li>
           <li>Turn on Call Forwarding <img src="img/ico-3-3.png" srcset="img/ico-3-3@2x.png 2x" width="250" height="36" alt=""></li>
           <li>Type in the Phone Number you wish your calls to be forwarded to <img src="img/ico-3-4.png" srcset="img/ico-3-4@2x.png 2x" width="250" height="36" alt=""></li>
         </ol>
