--- a/src/index.html
+++ b/src/index.html
@@ -131,7 +131,9 @@
           </a>
           <a href="#" class="card">
             <img src="img/show1.jpg" srcset="img/show1@2x.jpg 2x" width="292" height="152" alt="">
-            <div class="card__date">Jul 10 at 2 pm</div>
+            <div class="card__date">
+              <span class="card__live">Live</span>
+            </div>
             <div class="card__person">
               <img src="img/player1.jpg" srcset="img/player1@2x.jpg 2x" width="40" height="40" alt="">
               <p class="card__name">
